--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express": "~4.13.1",
     "jade": "~1.11.0",
     "knex": "^0.9.0",
+    "mongodb": "^2.1.7",
     "morgan": "~1.6.1",
     "pg": "^4.4.3",
     "serve-favicon": "~2.3.0"
