--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
     "cookie-parser": "~1.3.5",
     "debug": "~2.2.0",
     "dotenv": "^2.0.0",
+    "ds18b20": "^0.1.0",
     "express": "~4.13.1",
     "jade": "~1.11.0",
     "knex": "^0.9.0",
     "mongodb": "^2.1.7",
     "morgan": "~1.6.1",
+    "onoff": "^1.0.4",
     "pg": "^4.4.3",
     "serve-favicon": "~2.3.0",
     "socket.io": "^1.4.5"
