--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "onoff": "^1.0.4",
     "pg": "^4.4.3",
     "serve-favicon": "~2.3.0",
-    "socket.io": "^1.4.5"
+    "socket.io": "^1.4.5",
+    "socket.io-client": "^1.4.5"
   }
 }
